# anitomy-rs

./: .gitignore  Cargo.toml  README.md
src/: element.rs  keyword.rs  lib.rs  options.rs  parser.rs  tokenizer.rs  utils.rs
tests/: data.json  parser.rs
