[package]
name = "anitomy"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Use this until it gets merged (and released) upstream:
# https://github.com/rust-phf/rust-phf/pull/309
phf = { git = "https://github.com/edef1c/rust-phf/", rev = "3a86c8a152b587aa572bd17e318b3cf61133040d", features = ["macros", "uncased"] }
uncased = "0.9.10"
regex = "1"
serde = { version = "1.0.200", features = ["derive"], optional = true }

[dev-dependencies]
serde = {version = "1", features = ["derive"] }
serde_json = "1"

[features]
serde = ["dep:serde"]
